css/style.css
/******************************************************************************/
/**************************** Variables definition ****************************/
/******************************************************************************/
:root{
    /* Background variables */
    --bg-body: #ffffff;
    --bg-header: #ffffff;
    --bg-hero-free-trial: #b4d0e7;
    --bg-footer: #000000;
    --bg-logo-designIt: #a2d39b;
    --bg-logo-asu: #61082b;
    --bg-logo-ufFlorida: #0093ce;
    --bg-logo-topps: #ff1c1c;
    --bg-logo-worldBicycleRelief: #d5001f;
    --bg-logo-hearst: #b4d0e7;
    --bg-logo-lonelyPlanet: #0d2481;
    --bg-logo-clearChannelOutdoor: #ffd830;
    --bg-btn-default: #ffffff;
    --bg-btn-special: #0061ff;
    
    /* Text colors variables */
    --txt-body: #000000;
    --txt-footer: #ffffff;
    --txt-footer-languages: #9b9a9b;
    --txt-special: #61082b;
    --txt-btn-default: #000000;
    --txt-btb-special: #ffffff;
    
    /* Size variables */


}

/***************************************************************/
/**************************** Reset ****************************/
/***************************************************************/
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*****************************************************************/
/**************************** General ****************************/
/*****************************************************************/
.debug{
    border: 1px solid red;
}
body{
    font-family: 'Open Sans', sans-serif;
    color: var(--txt-body);
}
main{
    width: 100%;
}
.margin-auto{
    margin: 0 auto;
}
.main-container{
    max-width: 1200px;
}
.small-container{
    max-width: 1000px;
}
header nav ul{
    list-style: none;
}

/*****************************************************************/
/**************************** Flexbox ****************************/
/*****************************************************************/
.d-flex{
    display: flex;
    flex-flow: row wrap;
}
.d-f-align-item-center{
    align-items: center;
}

/*****************************************************************/
/****************************** Main *****************************/
/**************************** General ****************************/
/*****************************************************************/
main #hero, main #free-trial{
    background-color: var(--bg-hero-free-trial);
}

/*****************************************************************/
/**************************** Header ****************************/
/*****************************************************************/
header{
    background-color: var(--bg-header);
}

/*****************************************************************/
/**************************** Footer ****************************/
/*****************************************************************/
footer{
    background-color: var(--bg-footer);
    color: var(--txt-footer);
}

